...
  playerId,
  strengths,
  weaknesses,
}: StrengthsWeaknessesProps) {
  const { t } = useTranslation();
  return (
    <Card testID="strengths-weaknesses-card">
      <CardHeader>
        <CardTitle>{t("players.strengthsAndWeaknesses")}</CardTitle>
      </CardHeader>
      <CardContent className="gap-5">
        <NoteSection
          playerId={playerId}
...
